--- a/pages/datatypes.html
+++ b/pages/datatypes.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
-    <a href="https://gorm.io">https://gorm.io</a>
+    <a href="https://gorm.io">https://gorm.io</a><br>
+    <a href="https://github.com/go-gorm/datatypes" target="_blank">https://github.com/go-gorm/datatypes</a>
   </body>
 </html>
