--- a/pages/hints.html
+++ b/pages/hints.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <a href="https://gorm.io">https://gorm.io</a>
+    <a href="https://gorm.io">https://gorm.io</a><br>
+    <a href="https://github.com/go-gorm/hints" target="_blank">https://github.com/go-gorm/hints</a>
   </body>
 </html>
 
