--- a/pages/plugin/dbresolver.html
+++ b/pages/plugin/dbresolver.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
-    <a href="https://gorm.io">https://gorm.io</a>
+    <a href="https://gorm.io">https://gorm.io</a><br>
+    <a href="https://github.com/go-gorm/dbresolver" target="_blank">https://github.com/go-gorm/dbresolver</a>
   </body>
 </html>
